--- a/packages/app/src/translations/en_UK.json
+++ b/packages/app/src/translations/en_UK.json
@@ -4,6 +4,6 @@
     "DEV_DEPENDENCIES": "Development dependencies",
     "ALL_DEPENDENCIES": "All dependencies",
     "CHOOSE_THE_DEPENDENCIES_YOU_WANT_TO_ANALYZE": "Choose the type of dependencies you want to analyze",
-    "CHOOSE_THE_DEPENDENCIES_YOU_WANT_TO_ANALYZE_HELP": "You can choose which type of dependencies you want to take a closer look. You can choose to see only the dependencies needed to execute your code  (\"devDependencies\" on your package.json), or both!",
+    "CHOOSE_THE_DEPENDENCIES_YOU_WANT_TO_ANALYZE_HELP": "You can choose which type of dependencies you want to take a closer look. You can choose to see only the dependencies needed to execute your code (\"dependencies\" on each of your package.json), only the dependencies needed for your development environment (\"devDependencies\" on each of your package.json), or both!",
     "TAKE_INTO_CONSIDERATION_THAT_SELECTING_ALL_DEPENDENCIES": "Take into consideration that selecting all dependencies could have an impact on the performance of this tool, depending on how many nodes you have"
 }
