--- a/packages/app/src/translations/en_UK.json
+++ b/packages/app/src/translations/en_UK.json
@@ -1,9 +1,15 @@
 {
     "MONOREPOLYSER": "Monorepolyser",
+
     "DEPENDENCIES": "Dependencies",
     "DEV_DEPENDENCIES": "Development dependencies",
     "ALL_DEPENDENCIES": "All dependencies",
     "CHOOSE_THE_DEPENDENCIES_YOU_WANT_TO_ANALYZE": "Choose the type of dependencies you want to analyze",
     "CHOOSE_THE_DEPENDENCIES_YOU_WANT_TO_ANALYZE_HELP": "You can choose which type of dependencies you want to take a closer look. You can choose to see only the dependencies needed to execute your code (\"dependencies\" on each of your package.json), only the dependencies needed for your development environment (\"devDependencies\" on each of your package.json), or both!",
-    "TAKE_INTO_CONSIDERATION_THAT_SELECTING_ALL_DEPENDENCIES": "Take into consideration that selecting all dependencies could have an impact on the performance of this tool, depending on how many nodes you have"
+    "TAKE_INTO_CONSIDERATION_THAT_SELECTING_ALL_DEPENDENCIES": "Take into consideration that selecting all dependencies could have an impact on the performance of this tool, depending on how many nodes you have",
+
+    "FIRST_LEVEL_GRAPH": "First level graph",
+    "COMPLETE_GRAPH": "Complete graph",
+    "CHOOSE_THE_TYPE_OF_GRAPH_YOU_WANT_TO_ANALYZE": "Choose the type of graph you want to analyze",
+    "CHOOSE_THE_TYPE_OF_GRAPH_YOU_WANT_TO_ANALYZE_HELP": "You can choose the level of dependencies you want to "
 }
