--- a/packages/app/src/translations/en_UK.json
+++ b/packages/app/src/translations/en_UK.json
@@ -14,5 +14,11 @@
     "CHOOSE_THE_TYPE_OF_GRAPH_YOU_WANT_TO_ANALYZE_HELP": "You can choose the level of dependencies you want to see in your graph.",
     "IF_YOU_SELECT_TO_ONLY_SEE_FIRST_LEVEL": "If you select to only see the first level graph, you will see 1 node for each for your packages and the dependencies between them, without any external dependencies.",
     "IF_YOU_SELECT_TO_ONLY_SEE_COMPLETE_GRAPH": "If you select to only see the complete graph view, you will see 1 node for each for your packages, the dependencies between them and your external dependencies",
-    "TAKE_INTO_CONSIDERATION_THAT_SELECTING_COMPLETE_GRAPH": "Take into consideration that the complete graph could have an impact on the performance of this tool, depending on how many nodes you have"
+    "TAKE_INTO_CONSIDERATION_THAT_SELECTING_COMPLETE_GRAPH": "Take into consideration that the complete graph option could have an impact on the performance of this tool, depending on how many nodes you have",
+
+    "ALL_WORKSPACES": "All workspaces",
+    "CHOOSE_THE_WORKSPACE_YOU_WANT_TO_ANALYZE": "Choose what workspace you want to analyze",
+    "CHOOSE_THE_WORKSPACE_YOU_WANT_TO_ANALYZE_HELP": "You can select one of the workspaces that you have configurated in your repository or see them all at once.",
+    "TAKE_INTO_CONSIDERATION_THAT_SELECTING_ALL_WORKSPACES": "Take into consideration that seeing all your workspaces at once could have an impact on the performance of this tool, depending on how many nodes you have"
+
 }
